# HoneySnare

./: .env.example  .gitignore  README.md  netify.toml
.github/workflows/: check_honeypot.yml
backend/: Cargo.toml
backend/logs/: current.json  index.html  last_processed_block.json
backend/src/: lib.rs  main.rs
contracts/broadcast/Deploy.s.sol/42161/: run-1730098331.json
contracts/cache/: solidity-files-cache.json  test-failures
contracts/cache/Deploy.s.sol/42161/: run-1730098331.json
contracts/script/: Deploy.s.sol
contracts/src/: Honeypot.sol  TokenLiquidityManager.sol
contracts/test/: Honeypot.t.sol  TokenLiquidityManagerTest.t.sol
functions/: process_logs.js
