[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.8.6"
alloy-dyn-abi = "0.8.6"
dotenv = "0.15.0"
reqwest = { version = "0.11.27", features = ["json"] }
flate2 = "1.0.34"
hex = "0.4.3"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
