[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.8.6"
alloy-primitives = "0.8.6"
dotenv = "0.15.0"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0.34"